--- a/frontend/src/main/resources/static/output.css
+++ b/frontend/src/main/resources/static/output.css
@@ -554,6 +554,18 @@ video {
   --tw-contain-style:  ;
 }
 
+.left-3 {
+  left: 0.75rem;
+}
+
+.right-52 {
+  right: 13rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
 .flex {
   display: flex;
 }
@@ -570,6 +582,18 @@ video {
   height: 6rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -580,6 +604,10 @@ video {
 
 .w-2 {
   width: 0.5rem;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .flex-auto {
@@ -600,6 +628,26 @@ video {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .text-3xl {
