--- a/frontend/src/main/resources/static/output.css
+++ b/frontend/src/main/resources/static/output.css
@@ -606,6 +606,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -658,6 +662,26 @@ video {
   margin-left: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -708,6 +732,10 @@ video {
 
 .w-4\/6 {
   width: 66.666667%;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .flex-none {
