タスクタイトルの追加と背景の色を修正

--- a/frontend/src/main/resources/static/task_info.css
+++ b/frontend/src/main/resources/static/task_info.css
@@ -914,6 +914,11 @@ video {
   border-color: rgb(253 186 116 / var(--tw-border-opacity));
 }
 
+.border-orange-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 215 170 / var(--tw-border-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
