アプリ名とmenu内容の間隔を調整

--- a/frontend/src/main/resources/static/user/output.css
+++ b/frontend/src/main/resources/static/user/output.css
@@ -795,6 +795,14 @@ video {
   margin-top: 24rem;
 }
 
+.mb-40 {
+  margin-bottom: 10rem;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
